// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Self referencing type 1`] = `"Currently do not support self-referencing types: m1"`;

exports[`attempted import 1`] = `"Failed to parse file entirely: {\\"dir\\":\\"\\",\\"name\\":\\"conduit_a.cdt\\",\\"fullname\\":\\"conduit_a.cdt\\"}"`;

exports[`dependency multi file 1`] = `
Object {
  "namespace": Object {
    "inScope": EntityMap {
      "map": Map {
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 2,
                  "startColNumber": 15,
                  "startLineNumber": 1,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m1",
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 15,
                  "startLineNumber": 2,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_b.cdt",
            "name": "conduit_b.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 2,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m2",
        },
      },
      "size": 2,
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [],
    "kind": "public",
  },
}
`;

exports[`dependency subdirs 1`] = `
Object {
  "namespace": Object {
    "inScope": EntityMap {
      "map": Map {
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 2,
                  "startColNumber": 15,
                  "startLineNumber": 1,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m1",
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 15,
                  "startLineNumber": 2,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "sub/",
            "fullname": "sub/conduit_b.cdt",
            "name": "conduit_b.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 2,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m2",
        },
        "D" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 14,
                  "startLineNumber": 2,
                },
                "name": "my_m2",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_d.cdt",
            "name": "conduit_d.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 14,
            "endLineNumber": 2,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "D",
        },
        "m3" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 4,
                  "startColNumber": 15,
                  "startLineNumber": 3,
                },
                "name": "m1",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 5,
                  "startColNumber": 0,
                  "startLineNumber": 5,
                },
                "name": "m2",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "sub/",
            "fullname": "sub/conduit_c.cdt",
            "name": "conduit_c.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 3,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m3",
        },
      },
      "size": 4,
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [],
    "kind": "public",
  },
}
`;

exports[`function with invalid return type 1`] = `"Could not find a Struct named SomeType"`;

exports[`function with type return returns none 1`] = `"Function expects non-void return type but there are no statements"`;

exports[`function with unknown types 1`] = `"Unable to find end of entity for UnaryParameter at , b: Foreign.Type) {"`;

exports[`function with void returns type 1`] = `"Returning SomeType but expected void return"`;

exports[`simple echo function 1`] = `
Object {
  "namespace": Object {
    "inScope": EntityMap {
      "map": Map {
        "Shout" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 18,
                  "startLineNumber": 2,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 18,
            "endLineNumber": 2,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "Shout",
        },
        "echo" => Object {
          "body": Object {
            "kind": "FunctionBody",
            "loc": Object {
              "endColNumber": 35,
              "endLineNumber": 6,
              "startColNumber": 33,
              "startLineNumber": 6,
            },
            "statements": Array [
              Object {
                "kind": "ReturnStatement",
                "loc": Object {
                  "endColNumber": 15,
                  "endLineNumber": 7,
                  "startColNumber": 35,
                  "startLineNumber": 6,
                },
              },
              Object {
                "kind": "VariableReference",
                "loc": Object {
                  "endColNumber": 16,
                  "endLineNumber": 7,
                  "startColNumber": 15,
                  "startLineNumber": 7,
                },
                "name": "s",
                "returnType": Object {
                  "isArray": false,
                  "kind": "real type",
                  "val": Object {
                    "children": Object {
                      "Field": Array [
                        Object {
                          "isRequired": true,
                          "kind": "Field",
                          "loc": Object {
                            "endColNumber": 8,
                            "endLineNumber": 3,
                            "startColNumber": 18,
                            "startLineNumber": 2,
                          },
                          "name": "m",
                          "part": Object {
                            "FieldType": Object {
                              "differentiate": [Function],
                              "kind": "FieldType",
                            },
                          },
                        },
                      ],
                    },
                    "file": FileLocation {
                      "dir": "",
                      "fullname": "conduit_a.cdt",
                      "name": "conduit_a.cdt",
                    },
                    "kind": "Struct",
                    "loc": Object {
                      "endColNumber": 18,
                      "endLineNumber": 2,
                      "startColNumber": 0,
                      "startLineNumber": 0,
                    },
                    "name": "Shout",
                  },
                },
                "type": Object {
                  "isArray": false,
                  "kind": "real type",
                  "val": Object {
                    "children": Object {
                      "Field": Array [
                        Object {
                          "isRequired": true,
                          "kind": "Field",
                          "loc": Object {
                            "endColNumber": 8,
                            "endLineNumber": 3,
                            "startColNumber": 18,
                            "startLineNumber": 2,
                          },
                          "name": "m",
                          "part": Object {
                            "FieldType": Object {
                              "differentiate": [Function],
                              "kind": "FieldType",
                            },
                          },
                        },
                      ],
                    },
                    "file": FileLocation {
                      "dir": "",
                      "fullname": "conduit_a.cdt",
                      "name": "conduit_a.cdt",
                    },
                    "kind": "Struct",
                    "loc": Object {
                      "endColNumber": 18,
                      "endLineNumber": 2,
                      "startColNumber": 0,
                      "startLineNumber": 0,
                    },
                    "name": "Shout",
                  },
                },
              },
            ],
          },
          "kind": "Function",
          "loc": Object {
            "endColNumber": 17,
            "endLineNumber": 6,
            "startColNumber": 5,
            "startLineNumber": 4,
          },
          "name": "echo",
          "parameter": Object {
            "differentiate": [Function],
            "kind": "Parameter",
          },
          "requiresDbClient": false,
          "returnType": Object {
            "isArray": false,
            "kind": "real type",
            "val": Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 3,
                      "startColNumber": 18,
                      "startLineNumber": 2,
                    },
                    "name": "m",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "file": FileLocation {
                "dir": "",
                "fullname": "conduit_a.cdt",
                "name": "conduit_a.cdt",
              },
              "kind": "Struct",
              "loc": Object {
                "endColNumber": 18,
                "endLineNumber": 2,
                "startColNumber": 0,
                "startLineNumber": 0,
              },
              "name": "Shout",
            },
          },
        },
      },
      "size": 2,
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [
      Object {
        "body": Object {
          "kind": "FunctionBody",
          "loc": Object {
            "endColNumber": 35,
            "endLineNumber": 6,
            "startColNumber": 33,
            "startLineNumber": 6,
          },
          "statements": Array [
            Object {
              "kind": "ReturnStatement",
              "loc": Object {
                "endColNumber": 15,
                "endLineNumber": 7,
                "startColNumber": 35,
                "startLineNumber": 6,
              },
            },
            Object {
              "kind": "VariableReference",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 7,
                "startColNumber": 15,
                "startLineNumber": 7,
              },
              "name": "s",
              "returnType": Object {
                "isArray": false,
                "kind": "real type",
                "val": Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "isRequired": true,
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 8,
                          "endLineNumber": 3,
                          "startColNumber": 18,
                          "startLineNumber": 2,
                        },
                        "name": "m",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                          },
                        },
                      },
                    ],
                  },
                  "file": FileLocation {
                    "dir": "",
                    "fullname": "conduit_a.cdt",
                    "name": "conduit_a.cdt",
                  },
                  "kind": "Struct",
                  "loc": Object {
                    "endColNumber": 18,
                    "endLineNumber": 2,
                    "startColNumber": 0,
                    "startLineNumber": 0,
                  },
                  "name": "Shout",
                },
              },
              "type": Object {
                "isArray": false,
                "kind": "real type",
                "val": Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "isRequired": true,
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 8,
                          "endLineNumber": 3,
                          "startColNumber": 18,
                          "startLineNumber": 2,
                        },
                        "name": "m",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                          },
                        },
                      },
                    ],
                  },
                  "file": FileLocation {
                    "dir": "",
                    "fullname": "conduit_a.cdt",
                    "name": "conduit_a.cdt",
                  },
                  "kind": "Struct",
                  "loc": Object {
                    "endColNumber": 18,
                    "endLineNumber": 2,
                    "startColNumber": 0,
                    "startLineNumber": 0,
                  },
                  "name": "Shout",
                },
              },
            },
          ],
        },
        "kind": "Function",
        "loc": Object {
          "endColNumber": 17,
          "endLineNumber": 6,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "name": "echo",
        "parameter": Object {
          "differentiate": [Function],
          "kind": "Parameter",
        },
        "requiresDbClient": false,
        "returnType": Object {
          "isArray": false,
          "kind": "real type",
          "val": Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 3,
                    "startColNumber": 18,
                    "startLineNumber": 2,
                  },
                  "name": "m",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "file": FileLocation {
              "dir": "",
              "fullname": "conduit_a.cdt",
              "name": "conduit_a.cdt",
            },
            "kind": "Struct",
            "loc": Object {
              "endColNumber": 18,
              "endLineNumber": 2,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "Shout",
          },
        },
      },
    ],
    "kind": "public",
  },
}
`;

exports[`simple multi file 1`] = `
Object {
  "namespace": Object {
    "inScope": EntityMap {
      "map": Map {
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 2,
                  "startColNumber": 15,
                  "startLineNumber": 1,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m1",
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 15,
                  "startLineNumber": 2,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_b.cdt",
            "name": "conduit_b.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 2,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m2",
        },
        "m3" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 6,
                  "startColNumber": 15,
                  "startLineNumber": 5,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "file": FileLocation {
            "dir": "",
            "fullname": "conduit_b.cdt",
            "name": "conduit_b.cdt",
          },
          "kind": "Struct",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 5,
            "startColNumber": 5,
            "startLineNumber": 4,
          },
          "name": "m3",
        },
      },
      "size": 3,
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [],
    "kind": "public",
  },
}
`;
